# type_coverage_as_comment

./: Dockerfile  action.yml  entrypoint.sh  main.py  pyproject.toml
.github/workflows/: integration.yml  python.yml
