[tool.poetry]
name = "type_coverage_as_comment"
version = "0.0.1"
description = "Post Python type coverage as a comment to GitHub pull request"
authors = ["kracekumar <me@kracekumar.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.0.1"
beautifulsoup4 = "^4.9.3"
lxml = "^4.6.3"
mypy = "^0.910"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
